updated gitignore, added function for login

--- a/.gitignore
+++ b/.gitignore
@@ -184,6 +184,8 @@ fabric.properties
 
 new_git.bat
 keys.json
+common_questions.json
+linkedin_creds.json
 
 # idea folder, uncomment if you don't need it
 # .idea
